--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Required: Your Google Cloud project ID
-GCP_PROJECT=your-gcp-project-id
+GCP_PROJECT=gd-gcp-gridu-genai
 
 # Optional: GCP region (default: us-central1)
 GCP_LOCATION=us-central1
@@ -9,3 +9,7 @@ GEMINI_MODEL=gemini-2.0-flash
 
 # Optional: Embedding model (default: text-embedding-004)
 EMBEDDING_MODEL=text-embedding-004
+
+# Optional: For Docker with Qdrant service (docker-compose sets QDRANT_URL=http://qdrant:6333)
+# QDRANT_URL=http://qdrant:6333
+# QDRANT_COLLECTION=ifc_annual_report
